--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -18,18 +18,29 @@
     font-weight: normal;
     font-style: normal;
 }
-header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
+.header header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
 		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'}
-#nav{background-color: gray; height: 60px; width: 80%;}
-#nav ul{list-style: none; width: 60%; float: left;}
-#nav ul li{float: left; line-height: 30px; text-align: center; 
+.header #nav{background-color: gray; height: 60px; width: 80%;}
+.header #nav ul{list-style: none; width: 60%; float: left;}
+.header #nav ul li{float: left; line-height: 30px; text-align: center; 
 			width: 15%; background-color: gray;}
-#nav ul li a {font-size:20pt; text-decoration: none; color: white; padding: 15px; display: block; font-family: 'ImcreSoojin';}
-#nav input{text-align: center; width: 5%; margin: 15px; }
-#nav ul li:hover {background-color: pink; height: 60px;}
-#nav ul li a:visited { color: white;}
+.header #nav ul li a {content: 'Float';
+  display: block;
+  top: 0;
+  left: 0;
+  width: 120px;
+  height: 30px;
+  border-radius: 5px;
+  transition: all 0.2s ; font-size:20pt; text-decoration: none; color: white; padding: 15px; display: block; font-family: 'ImcreSoojin';}
+.header #nav input{text-align: center; width: 5%; margin: 15px; }
+.header #nav ul li:hover { text-align:center; background-color: pink; height: 60px; font-size:50pt;
+  transform: scale(1.1,1.1);
+  -ms-transform: scale(1.1,1.1);
+  -webkit-transform: scale(1.1,1.1);}
 
-#headerid{font-family: 'Vitro_core';}
+.header #nav ul li a:visited { color: white;}
+
+.header #headerid{font-family: 'Vitro_core';}
 #lgbtn{ width: 50px; border-radius: 5px; border-color: skyblue;}
 #lgbtn:hover{background-color: skyblue; color: white; border-color: white;}
 
