--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -18,12 +18,17 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'LeferiPoint-WhiteObliqueA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-WhiteObliqueA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 .header header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
-		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'}
-.header #nav{background-color: gray; height: 60px; width: 80%;}
-.header #nav ul{list-style: none; width: 60%; float: left;}
-.header #nav ul li{float: left; line-height: 30px; text-align: center; 
-			width: 15%; background-color: gray;}
+		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'; }
+.header #nav{background-color: gray; height: 60px; width: 60%;  display: flex;}
+.header #nav ul{list-style: none; width:60%; padding: 0,10%;}
+.header #nav ul li{ float: left; line-height: 30px; width: 30%; background-color: gray;}
 .header #nav ul li a {content: 'Float';
   display: block;
   top: 0;
@@ -33,22 +38,53 @@
   border-radius: 5px;
   transition: all 0.2s ; font-size:20pt; text-decoration: none; color: white; padding: 15px; display: block; font-family: 'ImcreSoojin';}
 .header #nav input{text-align: center; width: 5%; margin: 15px; }
-.header #nav ul li:hover { text-align:center; background-color: pink; height: 60px; font-size:50pt;
+.header #nav ul li:hover { overflow: hidden; text-align:center; background-color: pink; height: 60px; font-size:50pt; width:30%;
   transform: scale(1.1,1.1);
   -ms-transform: scale(1.1,1.1);
   -webkit-transform: scale(1.1,1.1);}
-
 .header #nav ul li a:visited { color: white;}
-
 .header #headerid{font-family: 'Vitro_core';}
 #lgbtn{ width: 50px; border-radius: 5px; border-color: skyblue;}
 #lgbtn:hover{background-color: skyblue; color: white; border-color: white;}
+#sminfo{ margin: auto; font-family: 'LeferiPoint-WhiteObliqueA'; color: white; font-size: 15pt; padding-top: 15px;}
+#infonav{background-color: gray; height: 60px; width: 18.9%; padding-left: 10%; padding-right: -5%; display: flex;}
+#infoul{list-style: none;}
+#infoul li{float: left;}
+#navdiv{display: flex; margin-left: 10%;}
+
 
 #remotenav{position: fixed; border: 1px solid black; width: 9.9%; height: 100px;
 border-radius: 10px; background-color: #d99cb1;}
-#remotenav ul{list-style:none;}
-#section{width:80%; height: 1000px; background-color: orange;}
+#remotenav ul{list-style:none; text-align: center; padding-right: 35px;}
+#mainsection{width:80%; height: 1000px; background-color: orange; text-align: center;}
+#regisection{margin:auto; width:80%; height: 1000px; background-color: orange; text-align: center;}
+#regibtn{text-align: center; }
 
 
+#infospan{display: flex;}
+#infospan a {
+	overflow:hidden;
+	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	display: block;
+	margin:0, auto;
+	max-width: 180px;
+	text-decoration: none;
+	border-radius: 4px;
+	border-color: green;
+	padding: 10px 15px;
+	font-size: 10pt;
+}
+#infospan a.button2 {
+	color: white;
+	box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+}
+#infospan a.button2:hover {
+	color: aqua;
+	box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
+}
 /* 
 footer{} */
