--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -27,22 +27,20 @@
 .header header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
 		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'; }
 .header #nav{background-color: gray; height: 60px; width: 60%;  display: flex;}
-.header #nav ul{list-style: none; width:60%; padding: 0,10%;}
+.header #nav ul{list-style: none; width:100%; padding: 0,10%;}
 .header #nav ul li{ float: left; line-height: 30px; width: 30%; background-color: gray;}
-.header #nav ul li a {content: 'Float';
-  display: block;
-  top: 0;
-  left: 0;
-  width: 120px;
-  height: 30px;
-  border-radius: 5px;
+.header #nav ul li a {opacity:1; content: 'Float'; display: block; top: 0; left: 0; width: 100%; height: 30px; border-radius: 5px;
   transition: all 0.2s ; font-size:20pt; text-decoration: none; color: white; padding: 15px; display: block; font-family: 'ImcreSoojin';}
 .header #nav input{text-align: center; width: 5%; margin: 15px; }
-.header #nav ul li:hover { overflow: hidden; text-align:center; background-color: pink; height: 60px; font-size:50pt; width:30%;
+.header #nav ul li:hover { text-align:center; background-color: pink; height: 55px; font-size:50pt; width:33.33%;display:block;
   transform: scale(1.1,1.1);
   -ms-transform: scale(1.1,1.1);
-  -webkit-transform: scale(1.1,1.1);}
+  -webkit-transform: scale(1.1,1.1);
+  margin-top: 2px;
+  }
+  .header #nav ul li:hover ~ .aspan{opacity: 1;}
 .header #nav ul li a:visited { color: white;}
+.header #nav ul li .aspan{ opacity:0.4; font-size: 15pt; color: white; font-family: 'ImcreSoojin';}
 .header #headerid{font-family: 'Vitro_core';}
 #lgbtn{ width: 50px; border-radius: 5px; border-color: skyblue;}
 #lgbtn:hover{background-color: skyblue; color: white; border-color: white;}
