--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -21,7 +21,7 @@
     font-weight: normal;
     font-style: normal;
 }
-
+a{text-decoration: none; font-weight: bold;}
 .header header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
 		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'; }
 .header #nav{background-color: gray; height: 60px; width: 60%;  display: flex;}
@@ -52,9 +52,10 @@
 
 #remotenav{position: fixed; border: 1px solid black; width: 9.9%; height: 100px;
 border-radius: 10px; background-color: #d99cb1;}
+
 #remotenav ul{list-style:none; text-align: center; padding-right: 35px;}
 #mainsection{width:80%; height: 1000px; background-color: orange; text-align: center;}
-#regisection{margin:auto; width:80%; height: 1000px; background-color: orange; text-align: center;}
+section{margin:auto; width:80%; height: 1000px; background-color: orange; text-align: center;}
 #regibtn{text-align: center; }
 #btspan{display: flex; margin-left: 60px;}
 #spn{border: 1px solid black; border-radius:3px; margin-top: 0px; padding-left: 7px; margin-bottom: auto;}
@@ -81,4 +82,24 @@ border-radius: 10px; background-color: #d99cb1;}
 	color: aqua;
 	box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
 }
-.footdiv{ background-color: gray; width: 80%;}
+
+#boarddiv{padding-top: 60px;}
+#writediv{padding-top: 60px;}
+#writetbl{width: 60%; height: auto;}
+#writetbl td{text-align: center;}
+#writetbl input{width: 50%; height:30px; text-align: center;}
+#writetbl textarea{width: 50%; height: 150px;}
+#writebtd{ text-align: left;}
+#bodtbl{width: 80%; height: auto; text-align: center;}
+#contendiv{padding-top: 60px;}
+#replydiv{padding-top: 60px;}
+#conttbl{width: 60%; height: auto;}
+#conttbl td{text-align: center;}
+#conttbl input{width: 50%; height:30px; text-align: center;}
+#conttbl textarea{width: 50%; height: 150px;}
+#replytbl {width: 80%; height: auto; text-align: center;}
+#replytbl td{text-align: center;}
+#replytbl input{width: 50%; height:30px; text-align: center;}
+#replytbl textarea{width: 50%; height: 150px;}
+.footdiv{margin:auto; background-color: gray; width: 80%; text-align: center;}
+.clockdiv{border:1px solid #dedede; margin-left:-10px; width:110%; height:50px; line-height:50px; color:#666;font-size:20pt; text-align:center;}
