--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -1,5 +1,4 @@
-@charset "UTF-8";
-*{margin: 0;}
+/*폰트*/
 @font-face {
     font-family: 'HS-Regular';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff') format('woff');
@@ -21,87 +20,45 @@
     font-weight: normal;
     font-style: normal;
 }
-a{text-decoration: none; font-weight: bold;}
-.header header{text-align: center; background-color: aqua; width: 80%; height: 100px; 
-		color: #4a359f; font-size: 40pt; font-weight: bolder; padding: 50px, 0; font-family: 'HS-Regular'; }
-.header #nav{background-color: gray; height: 60px; width: 60%;  display: flex;}
-.header #nav ul{list-style: none; width:100%; padding: 0,10%;}
-.header #nav ul li{ float: left; line-height: 30px; width: 30%; background-color: gray;}
-.header #nav ul li a {opacity:1; content: 'Float'; display: block; top: 0; left: 0; width: 100%; height: 30px; border-radius: 5px;
-  transition: all 0.2s ; font-size:20pt; text-decoration: none; color: white; padding: 15px; display: block; font-family: 'ImcreSoojin';}
-.header #nav input{text-align: center; width: 5%; margin: 15px; }
-.header #nav ul li:hover { text-align:center; background-color: pink; height: 55px; font-size:50pt; width:33.33%;display:block;
-  transform: scale(1.1,1.1);
-  -ms-transform: scale(1.1,1.1);
-  -webkit-transform: scale(1.1,1.1);
-  margin-top: 2px;
-  }
-  .header #nav ul li:hover ~ .aspan{opacity: 1;}
-.header #nav ul li a:visited { color: white;}
-.header #nav ul li .aspan{ opacity:0.4; font-size: 15pt; color: white; font-family: 'ImcreSoojin';}
-.header #headerid{font-family: 'Vitro_core';}
-#lgbtn{ width: 60px; height:50px; border-radius: 5px; border-color: skyblue;}
-#lgbtn:hover{background-color: skyblue; color: white; border-color: white;}
-#sminfo{margin-left:-65px; font-family: 'LeferiPoint-WhiteObliqueA'; color: white; font-size: 15pt; padding-top: 3px;display: flex;}
-#infonav{background-color: gray; height: 60px; width: 18.9%; padding-left: 10%; padding-right: -5%;}
-#infoul{list-style: none;}
-#infoul li{float: left;}
-#navdiv{display: flex; margin-left: 10%;}
-#logid{margin-left:10px; width: 100px;}
-#logpw{ margin-left: 1px; width: 100px;}
 
-#remotenav{position: fixed; border: 1px solid black; width: 9.9%; height: 100px;
-border-radius: 10px; background-color: #d99cb1;}
+/* 태그 전체적용 */
+*{margin: 0;}
+ul{list-style: none;}
+a{text-decoration: none;}
+a:visited{color: black; font-weight: bold;}
+li{display: inline-block;}
+section{margin:auto; margin-top:-21px; width:1100px; height: 800px; background-color:orange; text-align: center;}
+/* header */
+.header{background-color: aqua; width: 1100px; height: 100px; margin: auto;}
+header{font-size: 40pt; display:inline-block; font-family: 'HS-Regular'; margin: 20px;}
 
-#remotenav ul{list-style:none; text-align: center; padding-right: 35px;}
-#mainsection{width:80%; height: 1000px; background-color: orange; text-align: center;}
-section{margin:auto; width:80%; height: 1000px; background-color: orange; text-align: center;}
-#regibtn{text-align: center; }
-#btspan{display: flex; margin-left: 60px;}
-#spn{border: 1px solid black; border-radius:3px; margin-top: 0px; padding-left: 7px; margin-bottom: auto;}
-#sminfo a {
-	overflow:hidden;
-	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	display: block;
-	max-width: 180px;
-	text-decoration: none;
-	border-radius: 43px;
-	border-color: green;
-	padding: 18px 15px;
-	font-size: 10pt;
-}
-#sminfo a.button2 {
-	color: white;
-	box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
-}
-#sminfo a.button2:hover {
-	color: aqua;
-	box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
-}
+/* nav */
+.nav{background-color: gray;  display:flex; width: 1100px;  height:50px; margin: auto; font-family: 'ImcreSoojin';}
+.nav #ul1{padding: 10px; margin-right: 100px;}
+.nav #ul1 li{margin-left:50px; margin-right: 30px;}
+.nav a{font-size: 15pt; color:white; border:1px solid white; border-radius: 5px; display: inline-block; padding: 1px;
+	-webkit-transition: 0. 1s; -moz-transition: 0.1s; -o-transition: 0.1s; -ms-transition: 0.1s; transition: 0.1s;}
+.nav a:hover {background-color: pink;-webkit-transform: scale(1.5,1.5);-moz-transform: scale(1.5,1.5);
+    			-o-transform: scale(1.5,1.5);-ms-transform: scale(1.5,1.5);transform: scale(1.5,1.5);}  			
+.nav #ul2{text-align: left; display: flex;}
+.nav #ul2 #loginli{margin: 3px;}
+.nav #ul2 table{margin: -6px;}
+.nav #ul2 input{width: 100px;}
+.nav #ul2 #btli{margin-left: 15px;}
+.nav #ul2 button{height: 50px;}
+.nav #ul2 #clockli{margin: 15px; margin-left: 40px;}
+.nav #ul2 #navbtn2{margin: -36px; margin-left: 100px;}
+.aspan{ font-size: 10pt; opacity: 0.6;}
 
-#boarddiv{padding-top: 60px;}
-#writediv{padding-top: 60px;}
-#writetbl{width: 60%; height: auto;}
-#writetbl td{text-align: center;}
-#writetbl input{width: 50%; height:30px; text-align: center;}
-#writetbl textarea{width: 50%; height: 150px;}
-#writebtd{display: flex; margin-left: 155px;}
-#bodtbl{width: 80%; height: auto; text-align: center;}
-#contendiv{padding-top: 60px;}
-#replydiv{padding-top: 60px;}
-#conttbl{width: 60%; height: auto;}
-#conttbl td{text-align: center;}
-#conttbl input{width: 50%; height:30px; text-align: center;}
-#conttbl textarea{width: 50%; height: 150px;}
-#replytbl {width: 80%; height: auto; text-align: center;}
-#replytbl td{text-align: center;}
-#replytbl input{width: 50%; height:30px; text-align: center;}
-#replytbl textarea{width: 50%; height: 150px;}
-.footdiv{margin:auto; background-color: gray; width: 80%; text-align: center;}
-.clockdiv{border:1px solid #dedede; margin-left:-10px; width:110%; height:50px; 
-line-height:50px; color:#666;font-size:20pt; text-align:center;}
-#pnbtn{text-align: right;}
+
+/* board */
+#boardtbl {width: 800px;}
+#titletd {width: 400px;}
+#writetbl {text-align: center;}
+#writetbl input{ width: 95%; text-align: center; height: 45px; font-size: 20pt;}
+#writetbl textarea{width:500px; height: 400px;}
+#contenttbl input{width: 95%; text-align: center; height: 30px; font-size: 20pt;}
+#contenttbl textarea{width:500px; height: 400px; font-size: 15pt;}
+#replytbl {text-align: center;}
+#replytbl input{ width: 95%; text-align: center; height: 45px; font-size: 20pt;}
+#replytbl textarea{width:500px; height: 400px;}
