--- a/src/main/webapp/BasicCSS/BasicCSS.css
+++ b/src/main/webapp/BasicCSS/BasicCSS.css
@@ -34,7 +34,7 @@ header{font-size: 40pt; display:inline-block; font-family: 'HS-Regular'; margin:
 
 /* nav */
 .nav{background-color: gray;  display:flex; width: 1100px;  height:50px; margin: auto; font-family: 'ImcreSoojin';}
-.nav #ul1{padding: 10px; margin-right: 100px;}
+.nav #ul1{padding: 12px; margin-right: 100px;}
 .nav #ul1 li{margin-left:50px; margin-right: 30px;}
 .nav a{font-size: 15pt; color:white; border:1px solid white; border-radius: 5px; display: inline-block; padding: 1px;
 	-webkit-transition: 0. 1s; -moz-transition: 0.1s; -o-transition: 0.1s; -ms-transition: 0.1s; transition: 0.1s;}
@@ -42,12 +42,13 @@ header{font-size: 40pt; display:inline-block; font-family: 'HS-Regular'; margin:
     			-o-transform: scale(1.5,1.5);-ms-transform: scale(1.5,1.5);transform: scale(1.5,1.5);}  			
 .nav #ul2{text-align: left; display: flex;}
 .nav #ul2 #loginli{margin: 3px;}
+.nav #ul2 #username{padding-top: 7px;}
 .nav #ul2 table{margin: -6px;}
 .nav #ul2 input{width: 100px;}
 .nav #ul2 #btli{margin-left: 15px;}
 .nav #ul2 button{height: 50px;}
-.nav #ul2 #clockli{margin: 15px; margin-left: 40px;}
-.nav #ul2 #navbtn2{margin: -36px; margin-left: 100px;}
+.nav #ul2 #clockli{margin: 15px; margin-left: 51px;}
+.nav #ul2 #navbtn2{margin: -43px; margin-left: 100px;}
 .aspan{ font-size: 10pt; opacity: 0.6;}
 
 
